[package]
name = "fastn-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["server", "native"]
server = ["tokio", "fastn-wasm", "wasmtime", "taffy", "pretty"]
native = ["winit", "env_logger", "log", "wgpu", "render", "pretty"]
# render feature will be enabled only when we want to do native rendering, which is when terminal and native is set
render = []
terminal = ["render", "taffy", "pretty"]
web = []

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
bytemuck.workspace = true
env_logger = { workspace = true, optional = true }
fastn-wasm = { workspace = true, optional = true }
log = { workspace = true, optional = true }
once_cell.workspace = true
pretty = { workspace = true, optional = true }
serde.workspace = true
slotmap.workspace = true
taffy = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, optional = true }
wasmtime = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

[dev-dependencies]
indoc.workspace = true
