[package]
name = "fastn-runtime"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
owned-tdoc = ["fastn-resolved/owned-tdoc"]
default = ["owned-tdoc"]

[dependencies]
fastn-js.workspace = true
fastn-resolved.workspace = true
itertools.workspace = true
fastn-builtins.workspace = true
indoc.workspace = true
serde.workspace = true
once_cell.workspace = true
sha2.workspace = true
indexmap.workspace = true
