[package]
name = "fastn-ssh"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "fastn-ssh"
path = "src/main.rs"

[dependencies]
fastn-id52.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
fastn-p2p.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
