[package]
name = "fastn-update"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastn-core.workspace = true
serde.workspace = true
serde_json.workspace = true
once_cell.workspace = true
regex.workspace = true
tar.workspace = true
flate2.workspace = true
camino.workspace = true
