[package]
name = "fastn-update"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastn-core.workspace = true
fastn-ds.workspace = true
bytes.workspace = true
serde_json.workspace = true
zip.workspace = true
thiserror.workspace = true
snafu.workspace = true
tracing.workspace = true
colored.workspace = true
reqwest.workspace = true
