[package]
name = "fastn-utils"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
wasmtime.workspace = true
thiserror.workspace = true
ft-sys-shared = { workspace = true, features = ["rusqlite"] }
rusqlite.workspace = true
serde_json.workspace = true
