[package]
name = "fastn-xtask"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

# Define the library crate
[lib]
name = "fastn_xtask"
path = "src/lib.rs"

# # Define the binary that wraps the library functionality
# [[bin]]
# name = "xtask"
# path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
reqwest.workspace = true
zip.workspace = true
fastn-core.path="../fastn-core"
regex = "1.5.4"
