[package]
name = "fastn"
version = "0.4.109"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = ["fifthtry", "use-config-json"]
fifthtry = ["clift"]
use-config-json = []

[lib]
name = "fastn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
actix-web.workspace = true
camino.workspace = true
clap.workspace = true
clift = { workspace = true, optional = true }
deadpool-postgres.workspace = true
dirs.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
fastn-core.workspace = true
fastn-ds.workspace = true
fastn-observer.workspace = true
fastn-update.workspace = true
futures.workspace = true
pista-lib.workspace = true
reqwest.workspace = true
scc.workspace = true
serde.workspace = true
tauri-macros.workspace = true
tauri.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zip.workspace = true

[build-dependencies]
tauri-build.workspace = true
