[package]
name = "fastn"
version = "0.4.113"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
default = ["fifthtry", "use-config-json"]
fifthtry = ["clift"]
use-config-json = []
remote-access = ["fastn-daemon"]

[dependencies]
clift = { workspace = true, optional = true }
clap.workspace = true
fastn-observer.workspace = true
fastn-update.workspace = true
fastn-core.workspace = true
fastn-daemon = { workspace = true, optional = true }
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
dotenvy.workspace = true
fastn-ds.workspace = true
camino.workspace = true
actix-web.workspace = true
scc.workspace = true
deadpool-postgres.workspace = true
