[package]
name = "fbt-lib"
version = "0.1.18"
authors = [
    "Amit Upadhyay <upadhyay@gmail.com>",
    "Shobhit Sharma <shobhit@fifthtry.com>",
    "Sitesh <siteshpattanaik001@gmail.com>",
]
edition = "2021"
description = "folder based testing tool (library)"
license = "BSD-2-Clause"
homepage = "https://www.fifthtry.com/fifthtry/fbt/"

[dependencies]
walkdir.workspace = true
rand.workspace = true
colored.workspace = true
diffy.workspace = true
sha2.workspace = true
ftd.workspace = true

